GH-4 Added volume control using amixer
